<!DOCTYPE resources [
    <!ENTITY TERMUX_PACKAGE_NAME "com.termux">
    <!ENTITY TERMUX_APP_NAME "Termux">
    <!ENTITY TERMUX_X11_APP_NAME "Termux:X11-Extra">
    ]>
<resources>
    <string name="app_name">&TERMUX_X11_APP_NAME;</string>

    <string name="not_connected">Not connected</string>
    <string name="preferences_button_text">   PREFERENCES   </string>
    <string name="help_button_text">   HELP   </string>
    <string name="exit_button_text">   EXIT   </string>
    <string name="extra_keys_config_desc">Here you can set value of extra-keys variable like in Termux app (read <a href="http://wiki.termux.com/wiki/Touch_Keyboard#Extra_Keys_Row">this</a>) and more \n
E.g. <b>META</b> for <i>META key</i>, \n
<b>KEYBOARD</b> for <i>soft keyboard toggling key</i>, \n
<b>PREFERENCES</b> for <i>preferences opening key</i>, \n
<b>MOUSE_HELPER</b> for <i>mouse helper toggling key</i>, \n
<b>STYLUS_HELPER</b> for <i>stylus click override overlay toggling key</i>, \n
<b>EXIT</b> for <i>application exit key</i>.</string>
    <string name="notification_content_text">Pull down to show options</string>
    <string name="notification_open_layout">Layout</string>
    <string name="notification_open_preferences">Preferences</string>
    <string name="notification_exit">Exit</string>
    <string name="notification_restart_activity">Restart</string>
    <string name="notification_toggle_soft_keyboard">Toggle IME</string>
    <string name="notification_toggle_additional_key_bar">Toggle additional keyboard</string>
    <string name="notification_release_pointer_and_keyboard_capture">Release captures</string>
    <string name="notification_toggle_fullscreen">Toggle fullscreen</string>

    <string name="pref_main">Preferences</string>
    <string name="pref_output">Output</string>
    <string name="pref_pointer">Pointer</string>
    <string name="pref_kbd">Keyboard</string>
    <string name="pref_other">Other</string>
    <string name="pref_version">Version</string>
    <string name="pref_ekbar">Extra key bar preferences</string>
    <string name="pref_userActions">Response to user actions</string>

    <string name="pref_displayResolutionMode">Display resolution mode</string>
    <string name="pref_displayScale">Display scale, %</string>
    <string name="pref_displayResolutionExact">Display resolution</string>
    <string name="pref_displayResolutionCustom">Display resolution</string>
    <string name="pref_adjustResolution">Adjust the set resolution to fit screen orientation</string>
    <string name="pref_displayStretch">Stretch to fit display</string>
    <string name="pref_Reseed">Reseed screen while soft keyboard is open</string>
    <string name="pref_Reseed_summary">The screen size will be adjusted while Soft Keyboard is open.</string>
    <string name="pref_PIP">PIP mode</string>
    <string name="pref_PIP_summary">Show app in picture-in-picture mode when home button or recents button is pressed</string>
    <string name="pref_fullscreen">Fullscreen</string>
    <string name="pref_fullscreen_summary">Toggle immersive mode in your device display</string>
    <string name="pref_forceOrientation">Screen orientation</string>
    <string name="pref_hideCutout">Hide display cutout (if any)</string>
    <string name="pref_keepScreenOn">Keep Screen On</string>

    <string name="pref_touchMode">Touchscreen input mode</string>
    <string name="pref_scaleTouchpad">Apply display scale factor to touchpad</string>
    <string name="pref_showStylusClickOverride">Show stylus click options</string>
    <string name="pref_showStylusClickOverride_summary">Stylus touch override, left, middle or right click (stylus only)</string>
    <string name="pref_stylusIsMouse">Enable stylus mouse mode</string>
    <string name="pref_stylusIsMouse_summary">Make your stylus work like a mouse. When activated, stylus will only move the cursor and send mouse clicks, ignoring pressure, angle, and tilt.</string>
    <string name="pref_stylusButtonContactModifierMode">Stylus button contact modifier mode</string>
    <string name="pref_stylusButtonContactModifierMode_summary">Enable this option to send right or middle mouse buttons only when stylus touches the screen while the button is pressed.</string>
    <string name="pref_showMouseHelper">Show mouse click helper overlay</string>
    <string name="pref_showMouseHelper_summary">Onscreen mouse buttons usable with touchpad</string>
    <string name="pref_pointerCapture">Capture external pointer devices when possible</string>
    <string name="pref_pointerCapture_summary">Intercept all hardware pointer events. Pointer is back to Android after pressing Escape key.</string>
    <string name="pref_transformCapturedPointer">Transform captured pointer movements</string>
    <string name="pref_capturedPointerSpeedFactor">Captured pointer speed factor, %</string>
    <string name="pref_tapToMove">Enable tap-to-move for touchpads</string>

    <string name="pref_showAdditionalKbd">Show additional keyboard</string>
    <string name="pref_showAdditionalKbd_summary">Show keyboard with additional keys.</string>
    <string name="pref_showIMEWhileExternalConnected">Show IME with external keyboard</string>
    <string name="pref_showIMEWhileExternalConnected_summary">Show software keyboard while hardware keyboard is connected.</string>
    <string name="pref_preferScancodes">Prefer scancodes when possible</string>
    <string name="pref_preferScancodes_summary">Let X server handle hardware keyboard layout (with DE settings or setxkbmap).</string>
    <string name="pref_hardwareKbdScancodesWorkaround">Hardware keyboard scancodes workaround</string>
    <string name="pref_hardwareKbdScancodesWorkaround_summary">Fixes scancodes on some devices. Might cause problems with multiple layouts.</string>
    <string name="pref_dexMetaKeyCapture">Intercept system shortcuts</string>
    <string name="pref_dexMetaKeyCapture_summary">Samsung Dex only. Allows interception of &quot;Alt+F4&quot;, &quot;Meta+D&quot;, &quot;Meta+E&quot;, etc.</string>
    <string name="pref_enableAccessibilityService">Enable Accessibility service for intercepting system shortcuts manually.</string>
    <string name="pref_enableAccessibilityService_summary">Open Accessibility settings.</string>
    <string name="pref_enableAccessibilityServiceAutomatically">Enable Accessibility service for intercepting system shortcuts automatically.</string>
    <string name="pref_enableAccessibilityServiceAutomatically_summary">Requires WRITE_SECURE_SETTINGS permission.</string>
    <string name="pref_pauseKeyInterceptingWithEsc">Pause key intercepting with Esc key</string>
    <string name="pref_filterOutWinkey">Filter out intercepted Win (Meta/Mod4) key.</string>
    <string name="pref_filterOutWinkey_summary">Allows you to use Dex shortcuts while intercepting. Requires Accessibility service to work.</string>
    <string name="pref_enforceCharBasedInput">Enforce char based input</string>
    <string name="pref_enforceCharBasedInput_summary">Suppresses suggestions, predictive typing and CJK languages</string>

    <string name="pref_clipboardEnable">Clipboard sharing</string>
    <string name="pref_requestNotificationPermission">Request notification permission</string>
    <string name="pref_xrMode">Meta Oculus XR mode</string>
    <string name="pref_configureResponseToUserActions">Configure response to user actions</string>
    <string name="pref_storeSecondaryDisplayPreferencesSeparately">Store preferences for secondary displays separately</string>
    <string name="pref_storeSecondaryDisplayPreferencesSeparately_summary">Open this screen on display you want to configure</string>

    <string name="pref_adjustHeightForEK">Adjust display height for extra keys bar</string>
    <string name="pref_adjustHeightForEK_summary">May cause screen flickering during toggling EK bar.</string>
    <string name="pref_useTermuxEKBarBehaviour">Deactivate special keys on additional key bar after each keypress</string>
    <string name="pref_useTermuxEKBarBehaviour_summary">Use long-tap to lock special keys</string>
    <string name="pref_opacityEKBar">Opacity of extra keys bar, %</string>
    <string name="pref_extra_keys_config">Extra keys config</string>

    <string name="pref_swipeUpAction">Three finger swipe up</string>
    <string name="pref_swipeDownAction">Three finger swipe down</string>
    <string name="pref_volumeUpAction">Volume up</string>
    <string name="pref_volumeDownAction">Volume down</string>
    <string name="pref_backButtonAction">Back button</string>
    <string name="pref_notificationTapAction">Notification tap</string>
    <string name="pref_notificationButton0Action">Notification first button</string>
    <string name="pref_notificationButton1Action">Notification second button</string>
    <string name="pref_notificationButton2Action">Notification third button</string>
    <string name="pref_mediaKeysAction">Media keys</string>

    <string-array name="keybindTargetEntries">
        <item>None</item>
        <item>ESC</item>
        <item>TAB</item>
        <item>ENTER</item>
        <item>SPACE</item>
        <item>BACKSPACE</item>
        <item>DELETE</item>
        <item>UP</item>
        <item>DOWN</item>
        <item>LEFT</item>
        <item>RIGHT</item>
        <item>HOME</item>
        <item>END</item>
        <item>PGUP</item>
        <item>PGDN</item>
        <item>F1</item><item>F2</item><item>F3</item><item>F4</item>
        <item>F5</item><item>F6</item><item>F7</item><item>F8</item>
        <item>F9</item><item>F10</item><item>F11</item><item>F12</item>
    </string-array>

    <string-array name="keybindTargetValues">
        <item></item>
        <item>ESC</item>
        <item>TAB</item>
        <item>ENTER</item>
        <item>SPACE</item>
        <item>BKSP</item>
        <item>DEL</item>
        <item>UP</item>
        <item>DOWN</item>
        <item>LEFT</item>
        <item>RIGHT</item>
        <item>HOME</item>
        <item>END</item>
        <item>PGUP</item>
        <item>PGDN</item>
        <item>F1</item><item>F2</item><item>F3</item><item>F4</item>
        <item>F5</item><item>F6</item><item>F7</item><item>F8</item>
        <item>F9</item><item>F10</item><item>F11</item><item>F12</item>
    </string-array>

    <string name="pref_summary_requiresExactOrCustom">Requires "display resolution mode" to be "exact" or "custom"</string>
    <string name="pref_summary_requiresIntercepting">Requires intercepting system shortcuts with Dex mode or with Accessibility service</string>
    <string name="pref_summary_requiresTrackpadAndNative">Requires "Touchscreen input mode" to be "Trackpad" and "Display resolution mode" to be not "native"</string>
    <string name="support_button_text" />
</resources>