<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen app:key="main" app:title="@string/pref_main">
        <Preference app:title="@string/pref_output" app:fragment="output" />
        <Preference app:title="@string/pref_pointer" app:fragment="pointer" />
        <Preference app:title="@string/pref_kbd" app:fragment="kbd" />
        <Preference app:title="@string/pref_other" app:fragment="other" />
        <Preference app:key="version" app:title="@string/pref_version" />
    </PreferenceScreen>
    <PreferenceScreen app:key="output">
        <ListPreference app:key="displayResolutionMode" app:defaultValue="native" app:entries="@array/displayResolutionVariants" app:entryValues="@array/displayResolutionVariants"  />
        <SeekBarPreference app:key="displayScale" app:defaultValue="100" app:min="30" android:max="300" app:seekBarIncrement="10" app:showSeekBarValue="true" app:updatesContinuously="true" />
        <ListPreference app:key="displayResolutionExact" app:defaultValue="1280x1024" app:entries="@array/displayResolution" app:entryValues="@array/displayResolution" tools:ignore="DuplicateSpeakableTextCheck" />
        <EditTextPreference app:key="displayResolutionCustom" app:defaultValue="1280x1024" app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat app:key="adjustResolution" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="displayStretch" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="Reseed" app:defaultValue="true" />
        <SwitchPreferenceCompat app:key="PIP" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="fullscreen" app:defaultValue="false" />
        <ListPreference app:key="forceOrientation" app:defaultValue="auto" app:entries="@array/forceOrientationVariants" app:entryValues="@array/forceOrientationVariants" />
        <SwitchPreferenceCompat app:key="hideCutout" app:defaultValue="false" />
        <SwitchPreferenceCompat app:defaultValue="true" app:key="keepScreenOn" />
    </PreferenceScreen>
    <PreferenceScreen app:key="pointer">
        <ListPreference app:key="touchMode" app:defaultValue="1" app:entries="@array/touchscreenInputModesEntries" app:entryValues="@array/touchscreenInputModesValues" />
        <SwitchPreferenceCompat app:key="scaleTouchpad" app:defaultValue="true" />
        <SwitchPreferenceCompat app:key="showStylusClickOverride" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="stylusIsMouse" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="stylusButtonContactModifierMode" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="showMouseHelper" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="pointerCapture" app:defaultValue="false" />
        <ListPreference app:key="transformCapturedPointer" app:defaultValue="no" app:entries="@array/transformCapturedPointerEntries" app:entryValues="@array/transformCapturedPointerValues" />
        <SeekBarPreference app:key="capturedPointerSpeedFactor" app:defaultValue="100" app:min="1" android:max="300" app:seekBarIncrement="1" app:showSeekBarValue="true" app:updatesContinuously="true" />
        <SwitchPreferenceCompat app:key="tapToMove" app:defaultValue="false" />
    </PreferenceScreen>
    <PreferenceScreen app:key="kbd">
        <SwitchPreferenceCompat app:key="showAdditionalKbd" app:defaultValue="true" />
        <!-- this preference should be a part of `Prefs` but should not appear in PreferenceScreen -->
        <SwitchPreferenceCompat app:key="additionalKbdVisible" app:defaultValue="true" app:isPreferenceVisible="false" />
        <SwitchPreferenceCompat app:key="showIMEWhileExternalConnected" app:defaultValue="true" />
        <SwitchPreferenceCompat app:key="preferScancodes" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="hardwareKbdScancodesWorkaround" app:defaultValue="true" />
        <SwitchPreferenceCompat app:key="dexMetaKeyCapture" app:defaultValue="false" />
        <Preference app:key="enableAccessibilityService">
            <intent android:action="android.settings.ACCESSIBILITY_SETTINGS"/>
        </Preference>
        <SwitchPreferenceCompat app:key="enableAccessibilityServiceAutomatically" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="pauseKeyInterceptingWithEsc" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="filterOutWinkey" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="enforceCharBasedInput" app:defaultValue="false" />
    </PreferenceScreen>
    <PreferenceScreen app:key="other">
        <SwitchPreferenceCompat app:key="clipboardEnable" app:defaultValue="true" />
        <Preference app:key="requestNotificationPermission" />
        <Preference app:key="configureResponseToUserActions" app:fragment="userActions" />
        <SwitchPreferenceCompat app:key="storeSecondaryDisplayPreferencesSeparately" app:defaultValue="false" />
    </PreferenceScreen>
    <PreferenceScreen app:key="ekbar">
        <SwitchPreferenceCompat app:key="adjustHeightForEK" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="useTermuxEKBarBehaviour" app:defaultValue="false" />
        <SeekBarPreference app:key="opacityEKBar" app:defaultValue="100" app:min="1" android:max="100" app:seekBarIncrement="1" app:showSeekBarValue="true" app:updatesContinuously="true" />
        <EditTextPreference app:key="extra_keys_config" />
    </PreferenceScreen>
    <PreferenceScreen app:key="userActions">
        <ListPreference app:key="swipeUpAction" app:defaultValue="no action" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
        <ListPreference app:key="swipeDownAction" app:defaultValue="toggle additional key bar" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
        <ListPreference app:key="volumeUpAction" app:defaultValue="no action" app:entries="@array/userActionsVolumeUpValues" app:entryValues="@array/userActionsVolumeUpValues" />
        <ListPreference app:key="volumeDownAction" app:defaultValue="no action" app:entries="@array/userActionsVolumeDownValues" app:entryValues="@array/userActionsVolumeDownValues" />
        <ListPreference app:key="backButtonAction" app:defaultValue="toggle soft keyboard" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
        <ListPreference app:key="notificationTapAction" app:defaultValue="open preferences" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
        <ListPreference app:key="notificationButton0Action" app:defaultValue="open preferences" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
        <ListPreference app:key="notificationButton1Action" app:defaultValue="exit" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
        <ListPreference app:key="notificationButton2Action" app:defaultValue="exit" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
        <ListPreference app:key="mediaKeysAction" app:defaultValue="no action" app:entries="@array/userActionsMediaKeyValues" app:entryValues="@array/userActionsMediaKeyValues" />
    </PreferenceScreen>

    <!-- CONTROLLER -->
    <PreferenceScreen app:key="controller" app:title="Controller">

        <ListPreference
            app:key="gamepadInputType"
            app:title="Input backend"
            app:defaultValue="xinput"
            app:entries="@array/gamepadInputTypeEntries"
            app:entryValues="@array/gamepadInputTypeValues"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="gamepadMode"
            app:title="Mapping mode"
            app:defaultValue="raw"
            app:entries="@array/gamepadModeEntries"
            app:entryValues="@array/gamepadModeValues"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="gamepadVibrate"
            app:title="Vibration"
            app:defaultValue="off"
            app:entries="@array/gamepadVibrateEntries"
            app:entryValues="@array/gamepadVibrateValues"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            app:key="gamepadVibrateStrength"
            app:title="Vibration strength"
            app:defaultValue="255"
            app:min="1"
            android:max="255"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />

        <SeekBarPreference
            app:key="gamepadStateHz"
            app:title="Polling rate (Hz)"
            app:defaultValue="60"
            app:min="10"
            android:max="500"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />

        <SwitchPreferenceCompat
            app:key="gamepadForwardX11"
            app:title="Forward gamepad to X11"
            app:defaultValue="true" />

        <EditTextPreference
            app:key="gamepadName"
            app:title="Gamepad name"
            app:defaultValue="Termux-X11 Pad"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="gamepadID"
            app:title="Gamepad ID"
            app:defaultValue="1"
            app:entries="@array/gamepadIDs"
            app:entryValues="@array/gamepadIDs"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="gamepadHost"
            app:title="Host"
            app:defaultValue="127.0.0.1"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="gamepadPortRumble"
            app:title="Gamepad Port"
            app:defaultValue="4600"
            app:useSimpleSummaryProvider="true" />

        <!-- Secțiune Key Bindings (ascunsă implicit; o faci vizibilă din cod când backend == "keys") -->
        <PreferenceCategory
            app:key="keybinds_section"
            app:title="Key Bindings"
            app:isPreferenceVisible="false">

            <Preference
                app:key="keybinds_open"
                app:title="Open Key Bind Mapper"
                app:summary="Create and edit key binding rules"
                app:fragment="keybind_mapper_fragment" />
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- KEY BIND MAPPER -->
    <PreferenceScreen
        app:key="keybind_mapper_fragment"
        app:title="Key Bind Mapper">

        <SwitchPreferenceCompat
            app:key="keybindRemapperEnabled"
            app:title="Enable key remapper"
            app:defaultValue="true" />

        <!-- Butoane standard -->
        <ListPreference app:key="keybind_btn_a"  app:title="A"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />
        <ListPreference app:key="keybind_btn_b"  app:title="B"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />
        <ListPreference app:key="keybind_btn_x"  app:title="X"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />
        <ListPreference app:key="keybind_btn_y"  app:title="Y"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />

        <ListPreference app:key="keybind_btn_lb" app:title="LB"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />
        <ListPreference app:key="keybind_btn_rb" app:title="RB"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />
        <ListPreference app:key="keybind_btn_lt" app:title="LT (digital)"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />
        <ListPreference app:key="keybind_btn_rt" app:title="RT (digital)"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />

        <ListPreference app:key="keybind_btn_back"  app:title="Back/Select"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />
        <ListPreference app:key="keybind_btn_start" app:title="Start"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />

        <ListPreference app:key="keybind_btn_ls" app:title="LS (stick click)"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />
        <ListPreference app:key="keybind_btn_rs" app:title="RS (stick click)"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />

        <!-- DPAD -->
        <ListPreference app:key="keybind_dpad_up"    app:title="D-Pad Up"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />
        <ListPreference app:key="keybind_dpad_down"  app:title="D-Pad Down"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />
        <ListPreference app:key="keybind_dpad_left"  app:title="D-Pad Left"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />
        <ListPreference app:key="keybind_dpad_right" app:title="D-Pad Right"
            app:defaultValue="none"
            app:entries="@array/keybindOptionsEntries"
            app:entryValues="@array/keybindOptionsValues"
            app:useSimpleSummaryProvider="true" />
    </PreferenceScreen>

</PreferenceScreen>
